--- a/etcd-operator.yaml
+++ b/etcd-operator.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: ethos-etcd-operator-sa
+  name: etcd-operator-sa
   namespace: kube-system
   labels:
     app: etcd-operator
@@ -11,7 +11,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
 metadata:
-  name: ethos-etcd-operator-role
+  name: etcd-operator-role
   labels:
     app: etcd-operator
 rules:
@@ -56,42 +56,42 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
-  name: ethos-etcd-operator-rolebinding
+  name: etcd-operator-rolebinding
   labels:
     app: etcd-operator
 subjects:
 - kind: ServiceAccount
-  name: ethos-etcd-operator-sa
+  name: etcd-operator-sa
   namespace: kube-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ethos-etcd-operator-role
+  name: etcd-operator-role
 ---
 # Source: etcd-operator/templates/operator-deployment.yaml
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
-  name: ethos-etcd-operator
+  name: etcd-operator
   namespace: kube-system
   labels:
     app: etcd-operator
 spec:
   selector:
     matchLabels:
-      app: ethos-etcd-operator
+      app: etcd-operator
       io.cilium.fixed-identity: "kv-store"
   replicas: 1
   template:
     metadata:
-      name: ethos-etcd-operator
+      name: etcd-operator
       labels:
-        app: ethos-etcd-operator
+        app: etcd-operator
         io.cilium.fixed-identity: "kv-store"
     spec:
-      serviceAccountName: ethos-etcd-operator-sa
+      serviceAccountName: etcd-operator-sa
       containers:
-      - name: ethos-etcd-operator
+      - name: etcd-operator
         image: "quay.io/coreos/etcd-operator:v0.9.3" 
         imagePullPolicy: Always
         command:
